<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CashBookActivity!</string>
    <string name="app_name">CashBook</string>
    <string name="add_entry">Add New Entry</string>
    <string name="desc_hint">Some Description</string>
    <string name="amount_hint">0.0</string>
    <string name="credit_switch_text">Credit/Debit</string>
    <string name="cancel_text1">Cancel</string>
    <string name="save_text">Save</string>
    <string name="delete">Delete</string>
    <string name="fields_required">All the fields are required</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="description_required">Description is required!</string>
    <string name="amount_required">Amount is required!</string>
    <string name="no_entries_found">No Entries Found</string>
    <string name="help">Help</string>
    <string name="datetext">Date</string>
    <string name="vlinetext">.</string>
    <string name="vlinetext2">|</string>
    <string name="descriptiontext">Description</string>
    <string name="paymenttext">$Payment</string>
    <string name="totaltext">Total</string>
    <string name="hlinetext">____________________________________________</string>
    <string name="date">date</string>
    <string name="vh">Date        Description         Payment          Total</string>
    <string name="description">description</string>
    <string name="receipts">receipts</string>
    <string name="total">Total</string>
    <string name="payments">payments</string>
    <string name="cradit">Credit</string>
    <string name="hlinetext2">.............................................................................................................</string>
    <string name="amount_text">Amount</string>
    <string name="tag_text">Tag</string>
    <string name="go_tag">Go Tag</string>
    <string name="go_duration">Go Duration</string>
    <string name="days">days</string>
    <string name="data_select">Select Data</string>
    <string name="tag_date">By Tag/Date</string>
    <string name="time_span">Tag Span</string>
    <string name="setting">Setting</string>
    <string name="currency">$</string>
    <string name="Currency">Currency</string>
    <string name="tag">Tag</string>
    <string name="Button">Ok</string>
<<<<<<< HEAD
    <string name="showdescription">show description</string>
=======
>>>>>>> 21facc0e4066b49870c762d305848768827050e4

</resources>