<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_hint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/tags"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_marginTop="5dip"
        android:hint="tags" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />

    <Switch
        android:id="@+id/switch_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credit_switch_text"
        android:textOff="@string/credit"
        android:textOn="@string/debit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClick"
            android:text="@string/save_text" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="onClick"
            android:text="@string/cancel_text1" />
    </LinearLayout>

</LinearLayout>